--- a/index.html
+++ b/index.html
@@ -14,8 +14,27 @@
     <title>Fylo Landing Page</title>
 </head>
 <body>
-    
+    <header class="header">
+        <img src="./images/logo.svg" alt="main-logo" class="logo">
+        <nav class="nav">
+            <ul class="nav-list">
+                <li class="nav-item">Features</li>
+                <li class="nav-item">Team</li>
+                <li class="nav-item">Sign In</li>
+            </ul>
+        </nav>
+    </header>
 
-    <script src="./scripts/script.js"></script>
+    <main class="main">
+        <section class="hero-section"></section>
+        <section class="feature-section"></section>
+        <section class="service-section"></section>
+        <section class="testimoial-section"></section>
+        <section class="cta-section"></section>
+    </main>
+
+    <footer class="footer">
+        
+    </footer>
 </body>
 </html>
