Add skeleton of the page - P2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,39 @@
     </main>
 
     <footer class="footer">
-        
+        <section class="location">
+            <img src="./images/icon-location.svg" alt="" class="location-logo">
+            <p class="location-content"></p>
+        </section>
+
+        <section class="contact-details">
+            <div class="phone">
+                <img src="./images/icon-phone.svg" alt="" class="phone-logo">
+                <span class="phone-number"></span>
+            </div>
+            <div class="email">
+                <img src="./images/icon-email.svg" alt="" class="phone-logo">
+                <span class="email-id"></span>
+            </div>           
+        </section>
+
+        <section class="know-us">
+            <ul class="know-us-list">
+                <li class="know-us-item"></li>
+                <li class="know-us-item"></li>
+                <li class="know-us-item"></li>
+                <li class="know-us-item"></li>
+                <li class="know-us-item"></li>
+                <li class="know-us-item"></li>
+                <li class="know-us-item"></li>
+            </ul>
+        </section>
+
+        <section class="social">
+            <span>fb</span>
+            <span>twt</span>
+            <span>ig</span>
+        </section>
     </footer>
 </body>
 </html>
