Add content of header & hero section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
     </header>
 
     <main class="main">
-        <section class="hero-section"></section>
+        <section class="hero-section">
+            <h1 class="hero-title">All your files in one secure location, accessible anywhere.</h1>
+            <p class="hero-content">Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
+            <button class="cta-btn">Get Started</button>
+        </section>
+
         <section class="feature-section"></section>
         <section class="service-section"></section>
         <section class="testimoial-section"></section>
