Add content of features & services section

--- a/index.html
+++ b/index.html
@@ -27,13 +27,60 @@
 
     <main class="main">
         <section class="hero-section">
+            <img src="./images/illustration-intro.png" alt="people picking out large files from a folder" class="hero-img">
             <h1 class="hero-title">All your files in one secure location, accessible anywhere.</h1>
             <p class="hero-content">Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
             <button class="cta-btn">Get Started</button>
         </section>
 
-        <section class="feature-section"></section>
-        <section class="service-section"></section>
+        <section class="feature-section">
+            <article class="article">
+                <img src="./images/icon-access-anywhere.svg" alt="access-anywhere-logo" class="feature-img">
+                <h3 class="feature-title">Access your files, anywhere</h3>
+                <p class="feature-content">
+                    The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.
+                </p>
+            </article>
+
+            <article class="article">
+                <img src="./images/icon-security.svg" alt="security shield logo" class="feature-img">
+                <h3 class="feature-title">Security you can trust</h3>
+                <p class="feature-content">
+                    2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.
+                </p>
+            </article>
+
+            <article class="article">
+                <img src="./images/icon-collaboration.svg" alt="people and a yes logo in bg" class="feature-img">
+                <h3 class="feature-title">Real-time collaboration</h3>
+                <p class="feature-content">
+                    Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.
+                </p>
+            </article>
+
+            <article class="article">
+                <img src="./images/icon-any-file.svg" alt="" class="feature-img">
+                <h3 class="feature-title">Store any type of file</h3>
+                <p class="feature-content">
+                    Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
+                    file types to be securely stored and shared.
+                </p>
+            </article>
+        </section>
+
+        <section class="service-section">
+            <img src="./images/illustration-stay-productive.png" alt="people presenting their work" class="service-section-img">
+
+            <div class="service-sub-section">
+                <h2 class="service-section-title">Stay productive, wherever you are</h2>
+                <p class="service-section-content">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
+                <p class="service-section-content">  Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
+                <div class="service-section-btn">
+                    <span>See how Fylo works</span>
+                    <img src="./images/icon-arrow.svg" alt="go for it arrow">
+                </div>
+            </div>
+        </section>
         <section class="testimoial-section"></section>
         <section class="cta-section"></section>
     </main>
