Add styles for header & hero section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </article>
         </section>
 
-        <section class="service-section">
+        <!-- <section class="service-section">
             <img src="./images/illustration-stay-productive.png" alt="people presenting their work" class="service-section-img">
 
             <div class="service-sub-section">
@@ -82,10 +82,10 @@
             </div>
         </section>
         <section class="testimoial-section"></section>
-        <section class="cta-section"></section>
+        <section class="cta-section"></section> -->
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <section class="location">
             <img src="./images/icon-location.svg" alt="" class="location-logo">
             <p class="location-content"></p>
@@ -119,6 +119,6 @@
             <span>twt</span>
             <span>ig</span>
         </section>
-    </footer>
+    </footer> -->
 </body>
 </html>
