Add styles for services section

--- a/index.html
+++ b/index.html
@@ -68,20 +68,20 @@
             </article>
         </section>
 
-        <!-- <section class="service-section">
+        <section class="service-section">
             <img src="./images/illustration-stay-productive.png" alt="people presenting their work" class="service-section-img">
 
             <div class="service-sub-section">
                 <h2 class="service-section-title">Stay productive, wherever you are</h2>
                 <p class="service-section-content">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
                 <p class="service-section-content">  Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
-                <div class="service-section-btn">
+                <a href="#" class="service-section-btn">
                     <span>See how Fylo works</span>
                     <img src="./images/icon-arrow.svg" alt="go for it arrow">
                 </div>
             </div>
         </section>
-        <section class="testimoial-section"></section>
+        <!-- <section class="testimoial-section"></section>
         <section class="cta-section"></section> -->
     </main>
 
