Add structure & content of testimonials section

--- a/index.html
+++ b/index.html
@@ -78,11 +78,46 @@
                 <a href="#" class="service-section-btn">
                     <span>See how Fylo works</span>
                     <img src="./images/icon-arrow.svg" alt="go for it arrow">
-                </div>
+                </a>
             </div>
         </section>
-        <!-- <section class="testimoial-section"></section>
-        <section class="cta-section"></section> -->
+        <section class="testimonial-section">
+            <img src="./images/bg-quotes.png" alt="open quote" class="open-quote">
+            <article class="testimonial-article">
+                <p class="testimonial-content">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+                <div class="person">
+                    <img src="./images/profile-1.jpg" alt="person" class="person-img">
+                    <div class="person-details">
+                        <h4 class="person-name">Satish Patel</h4>
+                        <h5 class="person-designation">Founder & CEO, Huddle</h5>
+                    </div>
+                </div>
+            </article>
+
+            <article class="testimonial-article">
+                <p class="testimonial-content">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+                <div class="person">
+                    <img src="./images/profile-2.jpg" alt="person" class="person-img">
+                    <div class="person-details">
+                        <h4 class="person-name">Bruce McKenzie</h4>
+                        <h5 class="person-designation">Founder & CEO, Huddle</h5>
+                    </div>
+                </div>
+            </article>
+
+            <article class="testimonial-article">
+                <p class="testimonial-content">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+                <div class="person">
+                    <img src="./images/profile-3.jpg" alt="person" class="person-img">
+                    <div class="person-details">
+                        <h4 class="person-name">Iva Boyd</h4>
+                        <h5 class="person-designation">Founder & CEO, Huddle</h5>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+        <!-- <section class="cta-section"></section> -->
     </main>
 
     <!-- <footer class="footer">
