Add styles of cta section P1

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </a>
             </div>
         </section>
-        
+
         <section class="testimonial-section">
             <img src="./images/bg-quotes.png" alt="open quote" class="open-quote">
             <article class="testimonial-article">
@@ -118,7 +118,18 @@
             </article>
         </section>
 
-        <!-- <section class="cta-section"></section> -->
+        <div class="cta-container">
+            <section class="cta-section">
+                <h2 class="cta-title">Get early access today</h2>
+                <p class="cta-content">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+                <label for="email-id">
+                    <input class="input-email" type="email" id="email-id" autocomplete="off" placeholder="email@example.com">
+                </label>
+                <button class="cta-btn">Get Started For Free</button>
+            </section>
+        </div>
+
+        
     </main>
 
     <!-- <footer class="footer">
