Add styles for footer section

--- a/index.html
+++ b/index.html
@@ -127,45 +127,58 @@
                 </label>
                 <button class="cta-btn">Get Started For Free</button>
             </section>
-        </div>
-
-        
+        </div>    
     </main>
 
-    <!-- <footer class="footer">
-        <section class="location">
-            <img src="./images/icon-location.svg" alt="" class="location-logo">
-            <p class="location-content"></p>
+    <footer class="footer">
+        <img src="./images/logo.svg" alt="main logo" class="logo footer">
+        <section class="personal-details">
+            <section class="detail location">
+                <img src="./images/icon-location.svg" alt="" class="social-logo location-logo">
+                <p class="social-content location-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            </section>
+    
+            <section class="contact-details">
+                <div class="detail phone">
+                    <img src="./images/icon-phone.svg" alt="" class="social-logo">
+                    <span class="social-content">+1-543-123-4567</span>
+                </div>
+                <div class="detail email">
+                    <img src="./images/icon-email.svg" alt="" class="social-logo">
+                    <span class="social-content">example@fylo.com</span>
+                </div>           
+            </section>
         </section>
 
-        <section class="contact-details">
-            <div class="phone">
-                <img src="./images/icon-phone.svg" alt="" class="phone-logo">
-                <span class="phone-number"></span>
-            </div>
-            <div class="email">
-                <img src="./images/icon-email.svg" alt="" class="phone-logo">
-                <span class="email-id"></span>
-            </div>           
-        </section>
 
         <section class="know-us">
-            <ul class="know-us-list">
-                <li class="know-us-item"></li>
-                <li class="know-us-item"></li>
-                <li class="know-us-item"></li>
-                <li class="know-us-item"></li>
-                <li class="know-us-item"></li>
-                <li class="know-us-item"></li>
-                <li class="know-us-item"></li>
-            </ul>
+            <section class="list-one">
+                <ul class="know-us-list">
+                    <li class="know-us-item">About Us</li>
+                    <li class="know-us-item">Jobs</li>
+                    <li class="know-us-item">Press</li>
+                    <li class="know-us-item">Blog</li>
+                </ul>
+            </section>
+
+            <section class="list-two">
+                <ul class="know-us-list">
+                    <li class="know-us-item">Contact Us</li>
+                    <li class="know-us-item">Terms</li>
+                    <li class="know-us-item">Privacy</li>
+                </ul>
+            </section>  
         </section>
 
         <section class="social">
-            <span>fb</span>
-            <span>twt</span>
-            <span>ig</span>
+            <ion-icon class=" facebook-logo social-logo" name="logo-facebook"></ion-icon>
+            <ion-icon class="social-logo" name="logo-twitter"></ion-icon>
+            <ion-icon class="social-logo" name="logo-instagram"></ion-icon>
         </section>
-    </footer> -->
+    </footer>
+
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
